--- a/app/views/articles/show.twig
+++ b/app/views/articles/show.twig
@@ -30,9 +30,7 @@
         </article>
 
         <div class="mt-8">
-            <a href="/articles" class="text-blue-600 hover:text-blue-800">
-                ← Back to Articles
-            </a>
+            <button type="button" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">View Article</button>
         </div>
     </div>
 </div>
