--- a/app/views/auth/register.twig
+++ b/app/views/auth/register.twig
@@ -28,7 +28,7 @@
                         <label for="confirm_password" class="form-label">Confirm Password</label>
                         <input type="password" class="form-control" id="confirm_password" name="confirm_password" required>
                     </div>
-                    <button type="submit" class="btn btn-primary w-100">Register</button>
+                    <button type="submit" class="btn btn-custom w-100">Register</button>
                 </form>
                 <div class="text-center mt-3">
                     <a href="/login">Already have an account? Login</a>
