--- a/app/views/admin/articles.twig
+++ b/app/views/admin/articles.twig
@@ -40,11 +40,8 @@
                             <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-900">{{ article.created_at|date('Y-m-d H:i') }}</td>
                             <td class="px-6 py-4 whitespace-nowrap text-right text-sm font-medium">
                                 <a href="/articles/{{ article.id }}/edit" class="text-indigo-600 hover:text-indigo-900 mr-4">Edit</a>
-                                <form action="/admin/articles/{{ article.id }}/delete" method="POST" class="inline-block">
-                                    <button type="submit" class="text-red-600 hover:text-red-900" onclick="return confirm('Are you sure you want to delete this article?')">
-                                        Delete
-                                    </button>
-                                </form>
+                                <a href="/dashboard/articles/delete/{{ article.id }}" class="text-red-600 hover:text-red-900" onclick="return confirm('Are you sure you want to delete this article?')">Delete</a>
+                               
                             </td>
                         </tr>
                         {% endfor %}
