--- a/app/views/auth/login.twig
+++ b/app/views/auth/login.twig
@@ -20,7 +20,7 @@
                         <label for="password" class="form-label">Password</label>
                         <input type="password" class="form-control" id="password" name="password" required>
                     </div>
-                    <button type="submit" class="btn btn-primary w-100">Login</button>
+                    <button type="submit" class="btn btn-custom w-100">Login</button>
                 </form>
                 <div class="text-center mt-3">
                     <a href="/register">Don't have an account? Register</a>
