--- a/app/views/dashboard/create_article.twig
+++ b/app/views/dashboard/create_article.twig
@@ -40,10 +40,7 @@
                    class="inline-flex justify-center py-2 px-4 border border-gray-300 shadow-sm text-sm font-medium rounded-md text-gray-700 bg-white hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500">
                     Cancel
                 </a>
-                <button type="submit"
-                    class="inline-flex justify-center py-2 px-4 border border-transparent shadow-sm text-sm font-medium rounded-md text-white bg-blue-600 hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500">
-                    Create Article
-                </button>
+                <button type="submit" class="btn btn-custom">Create Article</button>
             </div>
         </form>
     </div>
