--- a/app/views/layouts/admin.twig
+++ b/app/views/layouts/admin.twig
@@ -18,7 +18,7 @@
     <!-- Top Navigation -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
         <div class="container-fluid">
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#sidebarMenu">
+            <button class="navbar-toggler btn btn-custom" type="button" data-bs-toggle="collapse" data-bs-target="#sidebarMenu">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <a class="navbar-brand" href="/admin/dashboard">Admin Panel</a>
