--- a/app/views/layouts/base.twig
+++ b/app/views/layouts/base.twig
@@ -126,9 +126,7 @@
     <nav class="navbar navbar-expand-lg navbar-dark mb-4">
         <div class="container">
             <a class="navbar-brand" href="{{ url('') }}">MVC Project</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
-                <span class="navbar-toggler-icon"></span>
-            </button>
+            <button class="navbar-toggler btn btn-custom" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">Toggle Navigation</button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav me-auto">
                     <li class="nav-item">
