--- a/app/views/layouts/main.twig
+++ b/app/views/layouts/main.twig
@@ -15,7 +15,7 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container">
             <a class="navbar-brand" href="/">My Blog</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+            <button class="navbar-toggler btn btn-custom" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
@@ -54,7 +54,7 @@
 
     <footer class="footer mt-5 py-3 bg-light">
         <div class="container text-center">
-            <span class="text-muted">© {% block year %}{{ "now"|date("Y") }}{% endblock %} My Blog. All rights reserved.</span>
+            <span class="text-muted">  {% block year %}{{ "now"|date("Y") }}{% endblock %} My Blog. All rights reserved.</span>
         </div>
     </footer>
 
